discussion/kv_engine/127320/127320_rev5_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-37319: Add support for opening historical snapshot - WIP

Try to detect the oldest file header containing the change and
stream that one

@todo add unit tests!!!

Change-Id: I727e8fc09c0a62a02e38a659855771f6d35133e2

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Trond Norbye
Date: 2020-05-07 11:58:48.000000000
Message: 
Uploaded patch set 5.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2020-05-07 12:20:05.000000000
Message: 
Patch Set 5: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/28014/ : FAILURE

Compile error at ..\kv_engine\engines\ep\src\couch-kvstore\couch-kvstore.cc(1404): error C2039: "seekFirstHeaderContaining": is not a member of "cb::couchstore" ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/28014/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/23977/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/engines/ep/src/couch-kvstore/couch-kvstore.cc:1404:39:
error: no member named "seekFirstHeaderContaining" in namespace "cb::couchstore"
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/23977/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/2138/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/couch-kvstore/couch-kvstore.cc:1404:39: error: no member named "seekFirstHeaderContaining" in namespace "cb::couchstore" [clang-diagnostic-error]
        auto status = cb::couchstore::seekFirstHeaderContaining(
                                      ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/2138/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/couch-kvstore/couch-kvstore.cc:1404:39:
error: no member named "seekFirstHeaderContaining" in namespace "cb::couchstore" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/2138/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/3570/ : FAILURE

Compile error at [2020-05-07T12:01:24.552Z] ../kv_engine/engines/ep/src/couch-kvstore/couch-kvstore.cc:1404:39:
error: ?seekFirstHeaderContaining? is not a member of ?cb::couchstore?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/3570/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/3597/ : FAILURE

Compile error at [2020-05-07T12:17:01.456Z] ../kv_engine/engines/ep/src/couch-kvstore/couch-kvstore.cc:1404:39:
error: ?seekFirstHeaderContaining? is not a member of ?cb::couchstore?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/3597/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/11439/ : FAILURE

Compile error at [2020-05-07T12:16:40.441Z] ../kv_engine/engines/ep/src/couch-kvstore/couch-kvstore.cc:1404:39:
error: ?seekFirstHeaderContaining? is not a member of ?cb::couchstore?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/11439/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/3655/ : FAILURE

Compile error at [2020-05-07T12:12:25.821Z] ../kv_engine/engines/ep/src/couch-kvstore/couch-kvstore.cc:1404:39:
error: ?seekFirstHeaderContaining? is not a member of ?cb::couchstore?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/3655/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/2653/ : FAILURE

Compile error at [2020-05-07T12:11:29.296Z] ../kv_engine/engines/ep/src/couch-kvstore/couch-kvstore.cc:1404:39:
error: no member named "seekFirstHeaderContaining" in namespace "cb::couchstore"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/2653/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/659/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
